k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-service-ingress
  namespace: analytics-service
spec:
  ingressClassName: nginx
  rules:
    - host: analytics-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
